# hagenuk-design-pattern-tdd-januar-2024

./: README.md
unit-testing/BlankCMakeProjects/BlankCMakeProjekt_download/: CMakeLists.txt
unit-testing/BlankCMakeProjects/BlankCMakeProjekt_download/tests/: CMakeLists.txt  test.cpp
unit-testing/BlankCMakeProjects/BlankCMakeProjekt_linux_find_package/tests/: CMakeLists.txt  test.cpp
unit-testing/BlankCMakeProjects/BlankCMakeProjekt_subdirectory/: CMakeLists.txt
unit-testing/BlankCMakeProjects/BlankCMakeProjekt_subdirectory/tests/: CMakeLists.txt
